deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-api
  template:
    metadata:
      labels:
        app: comments-api
    spec:
      containers:
      - name: comments-api
        image: kaiopiterson/comments-api:latest
        ports:
        - containerPort: 5000
