service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-api-service
spec:
  selector:
    app: comments-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
