ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: comment.kaiopiterson.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comments-api-service
            port:
              number: 80
